removed top banner under nav, fixed spacing in homepage section

--- a/grand-library/src/App.css
+++ b/grand-library/src/App.css
@@ -23,15 +23,18 @@ a{
 .navbar_container{
   display: flex;
   justify-content: space-evenly;
+  padding: 15px 0;
+  background-color: transparent;
+  box-shadow: rgba(0, 0, 0, 0.075) 0 1px;
 }
 
 .top_banner_text{
   text-align: center;
   width:100%;
   padding:10px;
-  color:#fff;
-  font-weight: 500;
-  background-color:#212529;
+  color:#212529;
+  font-weight: 900;
+  /* background-color:#f7f7f8; */
 }
 
 .navbar-brand{
@@ -158,9 +161,9 @@ box-shadow: 0px 0px 16px -4px rgba(0,0,0,0.28);
 .homepage_hero_container{
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
   width:100%;
-  /* gap:10%; */
+  gap:50px;
   
 }
 
@@ -372,7 +375,7 @@ box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.75);
 .search_wrapper{
   width:100%;
   height:auto;
-  padding:10px 30px;
+  padding:15px 30px;
   box-shadow: rgba(0, 0, 0, 0.075) 0 1px;
 }
 
